--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -6,7 +6,7 @@
 $white: #fff;
 
 $color-primary: #278da4; // teal
-$color-secondary: #b13c69; // dark violet red
+$color-secondary: #a32a52; // dark violet red
 $color-accent: #eeea72;
 $color-shade: #eee;
 
