--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -5,8 +5,8 @@
 // Colors
 $white: #fff;
 
-$color-primary: #278da4; // teal
-$color-secondary: #a32a52; // dark violet red
+$color-primary: #2ba8c4; // teal
+$color-secondary: #8a1d42; // dark violet red
 $color-accent: #eeea72;
 $color-shade: #eee;
 
