--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -6,7 +6,7 @@
 .main-content {
   display: flex;
   flex-wrap: wrap;
-  @media (min-width: 768px) {
+  @media (min-width: $break-m) {
       @include center;
   }
 }  
@@ -22,9 +22,9 @@
   margin: auto;
   padding: 1em 1em 3em; 
   p {
-        font-size: 1.2em; 
+        font-size: 1.2em;  
   }  
-    @media (min-width: 992px) {
+    @media (min-width: $break-l) {
         width: 45%;
   }
 }
