--- a/scss/style.css
+++ b/scss/style.css
@@ -597,9 +597,18 @@ header p {
 }
 
 @media (min-width: 576px) {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 45%;
-          flex: 1 45%;
+  .card {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 46%;
+            flex: 1 46%;
+  }
+}
+
+@media (min-width: 992px) {
+  .card {
+    -ms-flex-preferred-size: 27.33333%;
+        flex-basis: 27.33333%;
+  }
 }
 
 footer {
