--- a/scss/utilities/_functions.scss
+++ b/scss/utilities/_functions.scss
@@ -6,8 +6,8 @@
     @return ($target / $context) * 100%;
 }
 
-@function per-line($item) {
+@function per-line($items) {
     $g-pct: px-to-pc($gutter) * 2;
-    $g-total: $item * $g-pct;
+    $g-total: $items * $g-pct;
     @return (100% / $items) - $g-total;
 }
