--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -43,3 +43,22 @@
   flex-wrap: $wrap;
   justify-content: $just;
 }
+
+// Media queries
+@mixin mq($break) {
+  @if $break == 'xs' {
+    @media  (max-width: $break-xs) {
+      @content;
+    }
+  }
+  @else if $break == 'sm' {
+    @media  (min-width: $break-s) {
+      @content;
+    }
+  }
+  @else if $break == 'med' {
+    @media  (min-width: $break-m) {
+      @content;
+    }
+  }
+}
