--- a/scss/style.css
+++ b/scss/style.css
@@ -521,6 +521,12 @@ a:hover {
   font-size: 1.2em;
 }
 
+@media (min-width: 992px) {
+  .intro {
+    width: 45%;
+  }
+}
+
 header {
   position: relative;
   height: 460px;
@@ -590,7 +596,7 @@ header p {
   line-height: 1.25;
 }
 
-@media (min-width: 576px) {
+@media (max-width: ("xs": 575px, "sm": 576px, "med": 768px, "lg": 992px)) {
   .card {
     -webkit-box-flex: 1;
         -ms-flex: 1 46%;
@@ -598,7 +604,7 @@ header p {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: ("xs": 575px, "sm": 576px, "med": 768px, "lg": 992px)) {
   .card {
     -ms-flex-preferred-size: 27.33333%;
         flex-basis: 27.33333%;
