--- a/scss/style.css
+++ b/scss/style.css
@@ -483,12 +483,12 @@ p {
 }
 
 a {
-  color: #2ba8c4;
+  color: #278da4;
   text-decoration: none;
 }
 
 a:hover {
-  color: #8a1d42;
+  color: #b13c69;
 }
 
 .main-content {
@@ -591,12 +591,12 @@ header p {
 }
 
 .card h1 {
-  color: #2ba8c4;
+  color: #278da4;
   margin: 0.35em 0 0;
   line-height: 1.25;
 }
 
-@media (max-width: ("xs": 575px, "sm": 576px, "med": 768px, "lg": 992px)) {
+@media (min-width: 576px) {
   .card {
     -webkit-box-flex: 1;
         -ms-flex: 1 46%;
@@ -604,7 +604,7 @@ header p {
   }
 }
 
-@media (min-width: ("xs": 575px, "sm": 576px, "med": 768px, "lg": 992px)) {
+@media (min-width: 992px) {
   .card {
     -ms-flex-preferred-size: 27.33333%;
         flex-basis: 27.33333%;
@@ -677,18 +677,42 @@ footer::after {
 
 .btn-callout {
   font-size: 1.1em;
-  background-color: #8a1d42;
+  background-color: #b13c69;
 }
 
 .btn-info {
   font-size: 0.85em;
-  background-color: #2ba8c4;
+  background-color: #278da4;
   margin-top: auto;
 }
 
 .material-icons {
   font-size: 2.35em;
-  color: #4bbed7;
+  color: #31b0cd;
+}
+
+.icn-ent {
+  color: #79ccf5;
+}
+
+.icn-arch {
+  color: #fd6fa6;
+}
+
+.icn-edu {
+  color: #23bbae;
+}
+
+.icn-sim {
+  color: #2377bb;
+}
+
+.icn-soc {
+  color: #ada3f0;
+}
+
+.icn-games {
+  color: #3cb144;
 }
 
 .img-featured {
