--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -65,8 +65,8 @@ $sm: map-get($breakpoints, 'sm' );
 @mixin themes($map) {
   
 @each $theme, $color in $map {
-  .icn-#{$theme} {
+  &-#{$theme} {
     color: $color;
+    }
   }
-}
 }
